@@ -36,6 +36,7 @@ Details    : Remove 2.5.0 check from quota_check.c, quota_ctl.c,
 	     lustre/mgs/mgs_fs.c.
 	     Remove 2.4 kernel code from lustre/mgc/mgc_request.c.
 	     Remove 2.4 kernel check from lustre/mdt/mdt_lproc.c.
+	     Remove 2.4 kernel code from lustre/mdc/mdc_request.c.
 
 Severity   : enhancement
 Bugzilla   : 13690
